@startuml
title Diagramme de classes - Sprint 5 : Dashboards et reporting

skinparam backgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam dpi 170
skinparam nodesep 80
skinparam ranksep 90
skinparam defaultFontSize 15

skinparam class {
  BackgroundColor #E8F4F8
  BorderColor #0078D4
  ArrowColor #0078D4
  FontColor #000000
  FontSize 14
}

skinparam package {
  BackgroundColor #FFFFFF
  BorderColor #CBD5E1
  FontColor #0F172A
  FontSize 15
  FontStyle bold
}

left to right direction

package "Acteurs et formations" {

class User {
  + id : int
  + prenom : string
  + nom : string
  + email : string
  + role : string
  --
  + formations()
  + inscriptions()
}

class Formation {
  + id : int
  + formateur_id : int
  + titre : string
  + categorie : string
  + niveau : string
  + statut : string
  --
  + formateur()
  + inscriptions()
  + modules()
}

class Inscription {
  + id : int
  + user_id : int
  + formation_id : int
  + date_inscription : datetime
  --
  + user()
  + formation()
}

}

package "Indicateurs d'apprentissage" {

class ProgressionFormation {
  + id : int
  + user_id : int
  + formation_id : int
  + pourcentage_global : int
  + complete : boolean
  + termine_le : datetime
  --
  + user()
  + formation()
}

class TempsApprentissage {
  + id : int
  + user_id : int
  + formation_id : int
  + duree_secondes : int
  --
  + user()
  + formation()
}

}

package "Évaluations et certification" {

class TentativeQuiz {
  + id : int
  + quiz_id : int
  + user_id : int
  + score : float
  + score_max : int
  + reussi : boolean
  + termine_le : datetime
  --
  + user()
  + quiz()
}

class Certificat {
  + id : int
  + numero : string
  + user_id : int
  + formation_id : int
  + moyenne : float
  + mention : string
  + emis_le : datetime
  --
  + user()
  + formation()
}

}

package "Reporting" {

class DashboardController <<controller>> {
  + apprenantStats() : array
  + mesFormations() : array
  + inscriptionsParSemaine() : array
  + usersStats() : array
  + topFormations() : array
  + tempsApprentissage() : array
  + iaStats() : array
  + certificationsStats() : array
  + progressionParCategorie() : array
}

}

User "1" -- "0..*" Inscription : possède
Formation "1" -- "0..*" Inscription : reçoit

User "1" -- "0..*" ProgressionFormation : suit
Formation "1" -- "0..*" ProgressionFormation : mesure

User "1" -- "0..*" TempsApprentissage : consacre
Formation "1" -- "0..*" TempsApprentissage : cumule

User "1" -- "0..*" TentativeQuiz : réalise
User "1" -- "0..*" Certificat : obtient
Formation "1" -- "0..*" Certificat : délivre

DashboardController ..> User : statistiques utilisateurs
DashboardController ..> Formation : formations et catégories
DashboardController ..> Inscription : inscriptions
DashboardController ..> ProgressionFormation : progression
DashboardController ..> TempsApprentissage : engagement
DashboardController ..> TentativeQuiz : résultats / IA
DashboardController ..> Certificat : certifications

@enduml